--- a/package.json
+++ b/package.json
@@ -1,10 +1,27 @@
 {
   "name": "motools",
   "version": "1.0.0",
+  "author": "by_mori",
   "description": "自定义工具函数库\r ### 函数相关\r 1. call() & apply() & bind()\r 2. 函数节流与函数防抖\r ### 数组\r ### 对象\r ### 字符串\r ### DOM事件监听(带委托)\r ### ajax请求函数\r ### 事件总线\r ### 消息定义与发布\r ### Promise",
-  "main": "index.js",
+  "keywords": [
+    "motools",
+    "tools",
+    "mo",
+    "util",
+    "utils",
+    "array",
+    "object",
+    "ajax",
+    "function",
+    "string",
+    "axios",
+    "event-bus",
+    "pub-sub"
+  ],
+  "main": "./dist/Mutils-utils.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
