--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com.cnpmjs.org/bymori/motools.git"
+    "url": "https://github.com/bymori/motools"
   },
   "keywords": [],
   "author": "",
